--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "mysql2": "^3.14.1"
-  },
   "name": "site-eletroge",
-  "description": "",
   "version": "1.0.0",
+  "description": "Website criado para a empresa Eletroge.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pedooor013/site-eletroge.git"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pedooor013/site-eletroge/issues"
+  },
+  "homepage": "https://github.com/pedooor013/site-eletroge#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "pg": "^8.16.3"
+  }
 }
